--- a/Linkebinken.html
+++ b/Linkebinken.html
@@ -17,19 +17,18 @@
     <div class="musical">
       <h1>Jonathan!!!!!</h1>
       <p>Jonathan est Fou</p>
-      <img src="/THIJMEN.jpg" style="max-width:100%;height:auto;">
-      <img src="/marco.jpg" style="max-width:100%;height:auto;">
-      <img src="/Jojo.jpg" style="max-width:100%;height:auto;">
-      <img src="/noah.jpg" style="max-width:100%;height:auto;">
-      <img src="/Daan.jpg" style="max-width:100%;height:auto;">
-      <img src="/marco2.jpg" style="max-width:100%;height:auto;">
-      <img src="/BIKKEL.jpg" style="max-width:100%;height:auto;">
-      <img src="/BREMMERS.jpg" style="max-width:100%;height:auto;">
-      <img src="/JONATHANVDW.jpg" style="max-width:100%;height:auto;">
-      <img src="/JOASDEZEEUW.jpg" style="max-width:100%;height:auto;">
-      <img src="/JOJOBALD.jpg" style="max-width:100%;height:auto;">
-      <img src="/Keith Ahamad.jpg" style="max-width:100%;height:auto;">
-      <img src="/WADIEN.jpg" style="max-width:100%;height:auto;">
+      <img src="img/THIJMEN.jpg" style="max-width:100%;height:auto;">
+      <img src="img/marco.jpg" style="max-width:100%;height:auto;">
+      <img src="img/Jojo.jpg" style="max-width:100%;height:auto;">
+      <img src="img/Daan.jpg" style="max-width:100%;height:auto;">
+      <img src="img/marco2.jpg" style="max-width:100%;height:auto;">
+      <img src="img/BIKKEL.jpg" style="max-width:100%;height:auto;">
+      <img src="img/BREMMERS.jpg" style="max-width:100%;height:auto;">
+      <img src="img/JONATHANVDW.jpg" style="max-width:100%;height:auto;">
+      <img src="img/JOASDEZEEUW.jpg" style="max-width:100%;height:auto;">
+      <img src="img/JOJOBALD.jpg" style="max-width:100%;height:auto;">
+      <img src="img/Keith Ahamad.jpg" style="max-width:100%;height:auto;">
+      <img src="img/WADIEN.jpg" style="max-width:100%;height:auto;">
     </div>
   </body>
 </html>
