--- a/Linkebinken.html
+++ b/Linkebinken.html
@@ -13,7 +13,7 @@
         </figure>
       </div>
     </header>
-    <a href="/index.html" class="linkindex"><h3>terug</h3></a>
+    <a href="index.html" class="linkindex"><h3>terug</h3></a>
     <div class="musical">
       <h1>Jonathan!!!!!</h1>
       <p>Jonathan est Fou</p>
