--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="main">
       <figure>
-        <img src="img/logo.png" width="200" height="100" alt="logo"/>
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmqKql0IE_7IU6DuDTomOYzc2qjK8kymRZpNnNwr9Dxu8Vu5Ax-owhqQZY-QgOReyneE6ClCTIMuCtH8FqAVNQubmD3HdgAXaNcSqM0ITxhhQRbRf3Kg4j7bdWHjxR3myvheCFeosC0RSFDOjFHxw0SIrd8wasBqOR2GjUBm1Tjnbbj8ZWnG2LnvoA/s400/download.png" width="200" height="100" alt="logo"/>
       </figure>
       </div>      
       </header>
