--- a/Linkebinken.html
+++ b/Linkebinken.html
@@ -17,7 +17,7 @@
     <div class="musical">
       <h1>Jonathan!!!!!</h1>
       <p>Jonathan est Fou</p>
-      <img src="img/THIJMEN.jpg">
+      <img src="img/THIJMEN.jpg" style="max-width:100%;height:auto;">
       <img src="img/marco.jpg" style="max-width:100%;height:auto;">
       <img src="img/Jojo.jpg" style="max-width:100%;height:auto;">
       <img src="img/Daan.jpg" style="max-width:100%;height:auto;">
